Add decodescript to the RPC API Fix chain allowed duplicate issue Add Nethashrate chart
